--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,32 +8,36 @@
 			// Update the VARIANT arg to pick a Java version: 11, 17
 			// Append -bullseye or -buster to pin to an OS version.
 			// Use the -bullseye variants on local arm64/Apple Silicon.
-			"VARIANT": "17-bullseye",
+			"VARIANT": "11-bullseye",
 			// Options
 			"INSTALL_MAVEN": "true",
 			"INSTALL_GRADLE": "false",
 			"NODE_VERSION": "none"
 		}
 	},
-	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
-			"settings": {},
+			"settings": {
+				"java.configuration.updateBuildConfiguration": "automatic"
+			},
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"vscjava.vscode-java-pack"
 			]
 		}
 	},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "java -version",
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
 		"git": "os-provided"
+	},
+	// Bind the local settings into Marven
+	"mounts": [
+		"source=${localWorkspaceFolder}/settings.xml,target=/home/vscode/.m2/settings.xml,type=bind,consistency=cached"
+	],
+	"remoteEnv": {
+		"MAVEN_USER": "<YOUR USERNAME HERE>",
+		"MAVEN_PASSWORD": "<YOUR PASSWORD HERE>"
 	}
 }
