--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 	<properties>
 		<!-- HAPI 6 requires at least Java 11. -->
 		<hapifhir_version>6.0.0</hapifhir_version>
+		<tomcat.version>9.0.64</tomcat.version>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
@@ -55,6 +56,12 @@
 			<version>${hapifhir_version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>ca.uhn.hapi.fhir</groupId>
+			<artifactId>hapi-fhir-validation</artifactId>
+			<version>${hapifhir_version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>ca.uhn.hapi.fhir</groupId>
 			<artifactId>hapi-fhir-server-openapi</artifactId>
@@ -95,16 +102,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<!-- 
-		If you are using HAPI narrative generation, you will need to include Thymeleaf
-		as well. Otherwise the following can be omitted.
-		 -->
-		<dependency>
-			<groupId>org.thymeleaf</groupId>
-			<artifactId>thymeleaf</artifactId>
-			<version>3.0.2.RELEASE</version>
 		</dependency>
 
 		<!-- Used for CORS support -->
