Add connection to a Postgres database

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,6 +38,10 @@
 	],
 	"remoteEnv": {
 		"MAVEN_USER": "<YOUR USERNAME HERE>",
-		"MAVEN_PASSWORD": "<YOUR PASSWORD HERE>"
+		"MAVEN_PASSWORD": "<YOUR PASSWORD HERE>",
+		"POSTGRES_SERVER": "<YOUR POSTGRES SERVER HERE, LIKE 172.17.0.1:50201",
+		"POSTGRES_DATABASE": "<YOUR DATABASE HERE>",
+		"POSTGRES_USER": "<YOUR DATABASE USERNAME HERE>",
+		"POSTGRES_PASSWORD": "<YOUR DATABASE PASSWORD HERE>"
 	}
 }
