--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,gradle,windows,linux,macos,visualstudiocode,intellij+all
+
+container_debug
+.env
