--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,3 +10,8 @@ ARG INSTALL_GRADLE="false"
 ARG GRADLE_VERSION=""
 RUN if [ "${INSTALL_MAVEN}" = "true" ]; then su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install maven \"${MAVEN_VERSION}\""; fi \
     && if [ "${INSTALL_GRADLE}" = "true" ]; then su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install gradle \"${GRADLE_VERSION}\""; fi
+
+# Install PIP + Packages for the tests. Python3 is already installed.
+RUN apt update && apt -y install --no-install-recommends python3-pip && \
+    pip3 --disable-pip-version-check --no-cache-dir install requests black && \
+    rm -rf /var/lib/apt/lists/*
